[gd_scene load_steps=5 format=3 uid="uid://vwi8ssy4aldf"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_0q8eb"]
[ext_resource type="Texture2D" uid="uid://7sp8lw5l6fsu" path="res://graphics/projectiles/blue.png" id="1_30t62"]
[ext_resource type="AudioStream" uid="uid://c4uq7jii7u2b8" path="res://audio/laser.wav" id="3_abs5j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ypcgb"]
radius = 8.0
height = 116.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_0q8eb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_30t62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_ypcgb")

[node name="SelfdestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_abs5j")
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="SelfdestructTimer" to="." method="_on_timer_ready"]
[connection signal="timeout" from="SelfdestructTimer" to="." method="_on_selfdestruct_timer_timeout"]
